--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -11,3 +11,9 @@ target_compile_options(glad PRIVATE -fPIE)
 
 add_library(stb stb/stb_impl.c)   
 target_compile_options(stb PRIVATE -fPIE)	
+
+if (UNIX)
+    target_compile_options(nuklear PRIVATE -fPIE)	
+    target_compile_options(stb PRIVATE -fPIE)	
+    target_compile_options(glad PRIVATE -fPIE)	
+endif (UNIX)
